# python-migration-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  dashboard.py  docker-compose.yml  main.py  pyproject.toml
data/: version_blending_evaluations.csv
data/evaluation/: ground_truth.csv  rag_answers.csv  version_blending_evaluations.csv
data/processed/: embedding_metadata.json  monitoring.db
docs/: architecture.md  evaluation.md  setup.md  usage.md
evaluation/: 01-delme.py  01_generate_ground_truth.py  02_evaluate_search.py  03_evaluate_rag.py  04_llm_judge.py  05_evaluate_version_blending.py  check.py  generate_ground_truth.py
scripts/: build_dataset.py  download_docs.py  fetch_github_data.py
src/: chunker.py  config.py  download_docs.py  embeddings.py  hybrid_search.py  keyword_search.py  monitoring.py  rag.py  vector_search.py
